// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline backend passes custom class names 1`] = `
<button
  className="Button___3 custom-class-name"
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend passes custom classes  1`] = `
<button
  className="Button___1 custom-class-name"
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend passes custom styles  1`] = `
<button
  className="Button___2"
  style={
    Object {
      "color": "red",
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend renders style attribute and debug class name 1`] = `
<button
  className="Button___0"
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend renders the alt styles and debug class 1`] = `
<button
  className="Button___4 red___4"
  style={
    Object {
      "backgroundColor": "red",
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend renders the combined styles for extended components 1`] = `
<button
  className="RoundButton___5"
  style={
    Object {
      "borderRadius": 10,
      "padding": 10,
    }
  }
/>
`;
